NXT-2852: Use `GatewayException`s throughout the space logic
NXT-2852 (Review Gateway API Endpoints to handle un/known exceptions)